--- a/tmpl-go/model.go.html
+++ b/tmpl-go/model.go.html
@@ -4,7 +4,7 @@ import "github.com/techidea8/restgo"
 //数据库模型
 type {{.Model}} struct{
 	{{range $i,$v := .Columns}}
-        {{ $v.SqlStr }}
+        {{ $v.ModelTag }}
     {{end}}
 }
 
