修改模板展现形式

--- a/tmpl-go/api.js.html
+++ b/tmpl-go/api.js.html
@@ -1,4 +1,4 @@
-{{define "view/api"}}
+{{define "console/src/views/api/[model].js.tpl"}}
 import request from '@/utils/request'
 
 const prefix = "/{{.ModelL}}"
