--- a/tmpl-go/list.vue.html
+++ b/tmpl-go/list.vue.html
@@ -1,4 +1,4 @@
-{{define "view/list"}}
+{{define "console/src/views/[model]/list.vue.tpl"}}
 <template>
     <div class="app-container">
         <el-container> 
