--- a/tmpl-go/args.go.html
+++ b/tmpl-go/args.go.html
@@ -5,7 +5,7 @@ import(
     "github.com/techidea8/restgo"
 	"gorm.io/gorm"
 )
-
+//{{.Comment}}参数
 type {{.Model}} struct{
     restgo.PageArg
 	Total int `json:"total" form:"total"`
