--- a/tmpl-go/model.go.html
+++ b/tmpl-go/model.go.html
@@ -1,7 +1,7 @@
 {{define "server/model/[model].go.tpl"}}
 package model
 import "github.com/techidea8/restgo"
-//数据库模型
+//{{.Comment}}数据库模型
 type {{.Model}} struct{
 	{{range $i,$v := .Columns}}
         {{ $v.ModelTag }}
