--- a/tmpl-go/service.go.html
+++ b/tmpl-go/service.go.html
@@ -9,38 +9,38 @@ import (
 	
 )
 
-//创建新记录
+//创建{{.Comment}}
 func Create{{.Model}}(property model.{{.Model}}) (result model.{{.Model}}, err error) {
 	err = global.DbEngin.Create(&property).Error
 	return property, nil
 }
 
-//更新某一条记录
+//更新{{.Comment}}
 func Update{{.Model}}(property model.{{.Model}}) (result model.{{.Model}}, err error) {
 	err = global.DbEngin.Where("id = ?", property.Id).Updates(&property).Error
 	return property, err
 }
 
-//删除某一条记录
+//删除{{.Comment}}
 func Delete{{.Model}}(property model.{{.Model}}) (result model.{{.Model}}, err error) {
 	err = global.DbEngin.Where("id = ?", property.Id).Delete(&property).Error
 	return property, nil
 }
 
 
-//查询一条记录
+//查询{{.Comment}}
 func Find{{.Model}}ById(id uint) (result model.{{.Model}}, err error) {
 	result = model.{{.Model}}{}
 	err = global.DbEngin.Model(new(model.{{.Model}})).Where("id = ?", id).First(&result).Error
 	return result, err
 }
 
-//搜索支持分页
+//搜索{{.Comment}}支持分页
 func Search{{.Model}}(arg args.{{.Model}}) (result []model.{{.Model}}, total int64, err error) {
 	objs := make([]model.{{.Model}}, 0)
 
 	err = global.DbEngin.Model(new(model.{{.Model}})).Scopes(arg.Paginate(), arg.Condtions()).Order(arg.Sort()).Find(&objs).Error
-	total = 0
+	total = int64(arg.Total)
 	if arg.Total == -1 {
 		global.DbEngin.Model(new(model.{{.Model}})).Scopes(arg.Condtions()).Count(&total)
 	}
