update java templete

--- a/tmpl-java/api.js.html
+++ b/tmpl-java/api.js.html
@@ -1,4 +1,4 @@
-{{define "console/src/views/api/[model].js.tpl"}}
+{{define "console/src/api/[model].js.tpl"}}
 import request from '@/utils/request'
 
 const prefix = "/{{.ModelL}}"
