--- a/tmpl-java/modelDto.java.html
+++ b/tmpl-java/modelDto.java.html
@@ -7,6 +7,7 @@ import com.turingdance.base.BaseDTO;
 import java.io.Serializable;
 import java.util.List;
 
+import java.math.BigDecimal;
 import java.sql.Timestamp;
 
 /**
