--- a/tmpl-java/modelQueryCriteria.java.html
+++ b/tmpl-java/modelQueryCriteria.java.html
@@ -8,6 +8,8 @@ import com.turingdance.base.BaseDTO;
 
 import java.io.Serializable;
 import java.util.List;
+
+import java.math.BigDecimal;
 import java.sql.Timestamp;
 import com.turingdance.annotation.Query;
 /**
