--- a/tmpl-go/args.go.html
+++ b/tmpl-go/args.go.html
@@ -10,7 +10,7 @@ type {{.Model}} struct{
     restgo.PageArg
 	Total int `json:"total" form:"total"`
 	{{range $i,$v := .Columns}}
-        {{ $v.ArgTag }}
+       {{if $v.IsArg}} {{ $v.ArgTag }}{{end}}
     {{end}}
 }
 
